--- a/assets/css/mainContact.css
+++ b/assets/css/mainContact.css
@@ -1,6 +1,9 @@
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
+.contact{
+  padding-top: 60px;
+}
 .contact .info-container {
   background-color: var(--color-primary);
   height: 100%;
