--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ h6 {
   justify-content: center;
 }
 
-.top-bar .icon .bi-facebook, .bi-tiktok, .bi-youtube, .bi-instagram, .bi-linkedin{
+.top-bar .icon .bi-spotify, .bi-tiktok, .bi-youtube, .bi-instagram, .bi-linkedin{
   padding: 5px;
   font-size: 22px;
 }
@@ -211,7 +211,7 @@ h6 {
   }
   
   #ImaIni-home{
-    background: url("../img/MagneticaROJA.png") center center;
+    background-image: url("../img/MagneticaROJA.png");
     background-color: #F0F0F0;
     background-size: contain;
     background-repeat: no-repeat;
@@ -226,8 +226,13 @@ h6 {
   }
 
   #ImaIni-diseñografico{
-    background-image: url("../img/banners/banner-diseñoweb.png");
+    background-image: url("../img/banners/Banners-diseñografico.png");
   }
+
+  #ImaIni-sobremagnetica{
+    background-image: url("../img/banners/Banner-sobremagentica.png");
+  }
+  
   
   @media (min-width: 1024px) {
     .ima-ini{
@@ -263,16 +268,58 @@ h6 {
 .video-seccion{
   background-color: #941F20;
   color: #fff;
+  padding-left: 0px;
 }
 
 .bg-video-example{
   background-color: #892629;
+  display: flex;
+  align-items: center;
+  padding: 0px;
 }
 
 .video-seccion .video-textbox{
-  padding: 5%;
+  padding: 4%;
+  padding-left: 3%;
+  font-size: 18px;
 }
 
 .video-seccion h1{
   padding-bottom: 20px;
+}
+
+@media (max-width: 992px) {
+  .video-seccion{
+    padding: 0px;
+  }
+  iframe{
+    width: 100%;
+    height: 70vh;
+    padding: 0px;
+  }
+}
+
+@media (max-width: 760px) {
+  iframe{
+    width: 100%;
+    height: 50vh;
+  }
+}
+
+/*--------------------------------------------------------------
+# Pagina Sobre Magnetica
+--------------------------------------------------------------*/
+#sobre-magnetica{
+  padding: 15%;
+  padding-left: 5%;
+}
+#sobre-magnetica h1{
+  color: #941F20;
+  font-size: 24px;
+}
+@media (max-width: 760px) {
+  #sobre-magnetica{
+    padding: 0;
+    padding-top: 20px;
+  }
 }
