--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,8 +213,9 @@ h6 {
   #ImaIni-home{
     background-image: url("../img/MagneticaROJA.png");
     background-color: #F0F0F0;
-    background-size: contain;
+    background-size: 700px;
     background-repeat: no-repeat;
+    background-position: center 50px;
   }
 
   #ImaIni-diseñoweb{
@@ -247,7 +248,13 @@ h6 {
       height: 50vh;
     }
   }
-  
+
+  @media (max-width: 992px) {
+    #ImaIni-home{
+      background-position: center center;
+    }
+  }
+
   @media (max-width: 768px) {
     .ima-ini{
       height: 50vh;
