--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,3 +330,12 @@ h6 {
     padding-top: 20px;
   }
 }
+
+.titles-h1{
+  color: #941F20;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
