--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,6 +336,15 @@ h6 {
   font-size: 2.5rem;
   font-weight: bold;
   text-align: center;
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.underline {
+  --color: #941f20;
+  --position: center bottom;
+  --width: 100px;
+  --height: 5px;
+  background: linear-gradient(var(--color), var(--color)) var(--position) / var(--width) var(--height) no-repeat;
+  padding-bottom: 10px;
 }
