--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,12 +255,24 @@ h6 {
   @media (max-width: 992px) {
     #ImaIni-home{
       background-position: center center;
+    } 
+    #ImaMid{
+      height: 70vh;
     }
   }
 
   @media (max-width: 768px) {
     .ima-ini{
       height: 50vh;
+    }
+    #ImaMid{
+      height: 50vh;
+    }
+  }
+
+  @media (max-width: 500px) {
+    #ImaMid{
+      height: 35vh;
     }
   }
   
@@ -270,7 +282,7 @@ h6 {
       height: 100vh;
     }
   }
-  
+
   /*--------------------------------------------------------------
 # Video seccion (Todo lo que necesitas)
 --------------------------------------------------------------*/
