--- a/assets/css/webmodulo2.css
+++ b/assets/css/webmodulo2.css
@@ -39,7 +39,7 @@
     padding-right: 20px;
     padding-bottom: 20px;
     font-size: 16px;
-    height: 15vh;
+    height: 17vh;
 }
 .portfolio-lightbox {
   text-decoration: none;
@@ -89,8 +89,10 @@
 .text-center img {
   width: 100%;
 }
-@media (max-width: 5000px) {
-  .img-container{padding: 30px !important;}
+@media (max-width: 2000px) {
+  .img-container {
+    padding: 30px !important;
+  }
 }
 @media (max-width: 600px) {
   .faq .faq-list {
@@ -100,13 +102,19 @@
 
 .behind-cameras-img {
   width: 100%;
-  height: 35vh;
+  height: 32vh;
+  overflow: hidden;
+}
+
+.behind-cameras-img img {
+  width: 100%;
+  height: 32vh;
 }
 
 .zoom-imagen {
-  transition: transform .4s; 
+  transition: transform .3s; 
 }
 
 .zoom-imagen:hover {
-  transform: scale(1.1); 
+  transform: scale(1.05); 
 }
