--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ h6 {
   font-size: 2.5rem;
   font-weight: bold;
   text-align: center;
-  margin-top: 3rem;
+  margin-top: 4rem;
   margin-bottom: 4rem;
 }
 
@@ -362,4 +362,10 @@ h6 {
   --height: 5px;
   background: linear-gradient(var(--color), var(--color)) var(--position) / var(--width) var(--height) no-repeat;
   padding-bottom: 15px;
+}
+
+@media (max-width: 480px) {
+  .titles-h1{
+    font-size: 2rem;
+  }
 }
