--- a/assets/css/webmodulo2.css
+++ b/assets/css/webmodulo2.css
@@ -102,7 +102,7 @@
 
 .behind-cameras-img {
   width: 100%;
-  height: 32vh;
+  height: 34vh;
   overflow: hidden;
 }
 
@@ -117,4 +117,9 @@
 
 .zoom-imagen:hover {
   transform: scale(1.05); 
+}
+
+.behind-cameras-slider {
+  margin-top: 10vh;
+  margin-bottom: 20vh;
 }
