--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,10 +370,40 @@ h6 {
   }
 }
 
+/*--------------------------------------------------------------
+# Pop-up
+--------------------------------------------------------------*/
+
 .popup-class {
   border-top: 25px solid #941F20;
   border-bottom: 25px solid #941f20;
 }
 .title-class{
   text-align: center;
+}
+
+.popup-imagen{
+  background-image: url("../img/Pop-up.jpg");
+  background-size: 100%;
+  background-position: center;
+}
+
+.popup-button{
+  font-size: 16px;
+  color: #fff;
+  background-color: #941f20;
+  padding: 5px 2rem 5px 2rem;
+}
+
+.popup-close{
+  font-size: 16px;
+  padding: 5px 2rem 5px 2rem;
+}
+
+.modal-footer {
+  border-top: none;
+}
+
+.modal-body{
+  padding: 0 4rem 3rem 4rem;
 }
