responisve popup funcionando

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,8 @@ h6 {
   color: #fff;
   background-color: #941f20;
   padding: 5px 2rem 5px 2rem;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #7C131D;
 }
 
 .popup-close{
@@ -406,4 +408,16 @@ h6 {
 
 .modal-body{
   padding: 0 4rem 3rem 4rem;
+}
+
+@media (max-width: 992px) {
+  .popup-imagen{
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .modal-body{
+    padding: 25px;
+  }
 }
