--- a/assets/css/mainContact.css
+++ b/assets/css/mainContact.css
@@ -158,6 +158,10 @@
   }
 }
 
+@media (max-width: 1400px) {
+  .form-group{font-size: 0.9rem;}
+  
+}
 
 /*--------------------------------------------------------------
 # Footer
