--- a/assets/css/homeModulo2.css
+++ b/assets/css/homeModulo2.css
@@ -2,53 +2,7 @@
 /*--------------------------------------------------------------
 # Testimonios slider
 --------------------------------------------------------------*/
-.clients .title{
-  text-align: center;
-  color: #941F20;
-  margin-bottom: 70px;
-  font-size: 50px;
-}
 
-.card {
-  border: none;
-  padding-top: 70px;
-  padding-bottom: 60px;
-  border-radius: 10px;  
-}
-.card-text{
-  font-size: 20px;
-  font-weight: 10px;
-  line-height: 100%;
-  letter-spacing: .5px;
-}
-.card-body {
-  display: flex;
-  padding: 0;
-  align-items: center;
-}
-.card-body img {
-  height: 75px;
-}
-
-.card-profile {
-  margin-top: 12px;
-  margin-left: 15px;
-  line-height: 1px;
-}
-.card-title {
-  font-size: 16px;
-  font-weight: 450;
-}
-.stars {
-  color: #941F20;
-  letter-spacing: .15rem;
-  font-size: 18px;
-}
-
-.clients .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
 
 .clients .swiper-pagination .swiper-pagination-bullet {
   width: 12px;
@@ -56,7 +10,6 @@
   background-color: #F0F0F0;
   opacity: 1;
   border: 1px solid #941F20;
-  margin-bottom: 4vh;
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
@@ -68,10 +21,28 @@
 }
 
 .behind-cameras-slider {
-  margin-bottom: 20vh;
+  margin-bottom: 10rem;
 }
 
+.behind-cameras-img {
+  width: 100%;
+  height: 14rem;
+  overflow: hidden;
+}
 
+.behind-cameras-img img {
+  width: 100%;
+  height: 14rem;
+  overflow: hidden;
+}
+
+.zoom-imagen {
+  transition: transform .3s; 
+}
+
+.zoom-imagen:hover {
+  transform: scale(1.25); 
+}
 /*--------------------------------------------------------------
 # F.A.Q
 --------------------------------------------------------------*/
@@ -79,12 +50,7 @@
   color: #313030;
   overflow: hidden;
 }
-.faq .title {
-  text-align: center;
-  color: #941F20;
-  margin-bottom: 80px;
-  font-size: 50px;
-}
+
 
 .faq .faq-list {
   padding: 0 100px;
@@ -173,22 +139,4 @@
     padding: 0;
   }
 }
-.behind-cameras-img {
-  width: 100%;
-  height: 32vh;
-  overflow: hidden;
-}
 
-.behind-cameras-img img {
-  width: 100%;
-  height: 32vh;
-  overflow: hidden;
-}
-
-.zoom-imagen {
-  transition: transform .3s; 
-}
-
-.zoom-imagen:hover {
-  transform: scale(1.25); 
-}
