--- a/assets/css/webmodulo2.css
+++ b/assets/css/webmodulo2.css
@@ -2,17 +2,11 @@
 /*--------------------------------------------------------------
 # Portfolio slider
 --------------------------------------------------------------*/
-.clients .title{
-  text-align: center;
-  color: #941F20;
-  margin-bottom: 70px;
-  font-size: 50px;
-}
+
 
 .portfolio-card {
   background-color: #ffffff;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, .2);
-
 }
 .portfolio-card:hover {
   transition: 0.4s;
@@ -20,7 +14,7 @@
 }
 .portfolio-card img {
   width: 100%;
-  height: 40vh;
+  height: 16rem;
 }
 .portfolio-card .portfolio-text-content {
     padding: 10px 30px;
@@ -39,7 +33,7 @@
     padding-right: 20px;
     padding-bottom: 20px;
     font-size: 16px;
-    height: 17vh;
+    height: 6rem;
 }
 .portfolio-lightbox {
   text-decoration: none;
@@ -67,7 +61,7 @@
 }
 @media (min-width: 1400px) {
   .portfolio-card .portfolio-text {
-    height: 13vh;
+    height: 6rem;
   }
 }
 .espaciado {
@@ -83,10 +77,6 @@
 --------------------------------------------------------------*/
 .testimonios-section {
   text-align: center;
-}
-.testimonios-section .testimonios-title {
-  font-size: 50px;
-  color: #941F20;
 }
 .testimonios-section p {
   max-width: 55rem;
@@ -110,13 +100,13 @@
 
 .behind-cameras-img {
   width: 100%;
-  height: 34vh;
+  height: 14rem;
   overflow: hidden;
 }
 
 .behind-cameras-img img {
   width: 100%;
-  height: 32vh;
+  height: 14rem;
 }
 
 .zoom-imagen {
