--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,13 @@ h6 {
     }
   }
 
+  @media (max-width: 768px) {
+    .ima-ini{
+      background-size: 230%;
+      height: 40vh;
+    }
+  }
+
   @media (max-width: 500px) {
     #ImaMid{
       height: 32vh;
