--- a/assets/css/webmodulo1.css
+++ b/assets/css/webmodulo1.css
@@ -93,6 +93,7 @@
 @media (max-width: 980px) {
   .redesSociales-info {
     padding-left: 0px;
+    padding: 0px 50px;
     margin-top: 10%;
   }
   .redesSociales-video img {
@@ -171,6 +172,9 @@
     position: absolute;
     top: -30px;
     left: 450px;
+  }
+  .packs-info-item {
+    margin: 100px;
   }
 }
 
@@ -282,12 +286,13 @@
 .services .service-item {
   background: #fff;
   min-width: 200px;
-  max-height: 400px;
+  max-height: 600px;
   margin: 20px;
   min-height: 330px;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, .2);
   transition: all .4s;
   cursor: pointer;
+  color: black;
 }
 
 .services .service-item:hover {
@@ -334,6 +339,7 @@
 
 @media (max-width: 800px) {
   .services .service-item {
-    margin-bottom: 100px;
+    margin-bottom: 0px;
+    min-height: 550px;
   }
 }
