--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,13 +272,21 @@ h6 {
 
   @media (max-width: 768px) {
     .ima-ini{
-      background-size: 230%;
       height: 40vh;
     }
   }
 
   @media (max-width: 500px) {
+    .ima-ini{
+      background-size: 150%;
+      background-position: center center;
+      height: 40vh!important;
+    }
+  }
+
+  @media (max-width: 500px) {
     #ImaMid{
+      background-size:100%;
       height: 32vh;
     }
   }
