--- a/assets/css/webmodulo2.css
+++ b/assets/css/webmodulo2.css
@@ -117,3 +117,18 @@
   transform: scale(1.05); 
 }
 
+@media (max-width: 1300px){
+  .behind-cameras-img {
+    width: 100%;
+    height: 13rem;
+    overflow: hidden;
+  }
+}
+
+@media (max-width: 1300px){
+  .behind-cameras-img img {
+    width: 100%;
+    height: 13rem;
+    overflow: hidden;
+  }
+}
