--- a/assets/css/webmodulo2.css
+++ b/assets/css/webmodulo2.css
@@ -99,6 +99,9 @@
 }
 
 .behind-cameras-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 14rem;
   overflow: hidden;
@@ -115,20 +118,4 @@
 
 .zoom-imagen:hover {
   transform: scale(1.05); 
-}
-
-@media (max-width: 1300px){
-  .behind-cameras-img {
-    width: 100%;
-    height: 13rem;
-    overflow: hidden;
-  }
-}
-
-@media (max-width: 1300px){
-  .behind-cameras-img img {
-    width: 100%;
-    height: 13rem;
-    overflow: hidden;
-  }
 }
