--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ h6 {
   }
 
   #ImaIni-diseñoweb{
-    background-image: url("../img/banners/banner-diseñoweb.png");
+    background-image: url("../img/banners/banner-diseñoweb.jpeg");
   }
 
   #ImaIni-redessociales{
